--- a/index.html
+++ b/index.html
@@ -58,13 +58,15 @@
 
 			<!-- Banner -->
 				<section id="banner">
+					<video autoplay loop id="video-background" muted plays-inline>
+						<source src="assets/video/bg-compressed.mp4" type="video/mp4">
+					</video>
 					<h2>~$ Codified <span class="blinking-cursor">&#9646;</span></h2>
 					<p>We help make your event an experience to remember.</p>
 					<ul class="actions">
 						<li><a href="#cta" class="button special">Get in Touch</a></li>
 						<li><a href="#main" class="button">Learn More</a></li>
 					</ul>
-					
 				</section>
 
 			<!-- Main -->
